desktop profile info alignment fixed

--- a/client/src/components/AdminDashboard/viewprofile.css
+++ b/client/src/components/AdminDashboard/viewprofile.css
@@ -673,6 +673,10 @@ padding: 0;
         grid-template-columns: repeat(4,1fr);
     }
 
+    .fullProfile {
+        display: grid;
+        grid-template-columns: 1fr 3fr;
+    }
     
 }
 
